[tool.poetry]
name = "djangotodo"
version = "0.1.0"
description = ""
authors = ["Ali Bagheri <khodealib@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2"
django-bootstrap5 = "^23.3"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
